--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.5",
     "hardhat": "^2.26.2",
+    "pino-pretty": "^13.1.1",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.4"
