--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "deploy:sepolia": "npx hardhat run scripts/deploy-sepolia.js --network base-sepolia",
+    "deploy:base": "npx hardhat run scripts/deploy-base.js --network base",
+    "deploy:local": "npx hardhat run scripts/deploy-local.js --network localhost"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.51.1",
