new file:   BASE_DEV_INTEGRATION_GUIDE.md 	new file:   BASE_DEV_SUBMISSION.md 	new file:   MINIAPP_README.md 	new file:   MINIAPP_SUMMARY.md 	new file:   base.dev.json 	new file:   eslint.config.js 	new file:   next.config.ts 	modified:   package.json 	new file:   public/.well-known/farcaster.json 	new file:   public/icon.svg 	new file:   public/manifest.json 	new file:   scripts/deploy-miniapp.sh 	new file:   src/app/api/frame/route.ts 	modified:   src/app/layout.tsx 	modified:   src/app/page.tsx 	new file:   src/components/Connect.tsx 	new file:   src/components/Markets.tsx 	new file:   src/components/MiniappInterface.tsx 	new file:   src/lib/chains.ts 	new file:   src/lib/minilend.ts

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "typecheck": "tsc --noEmit",
     "deploy:sepolia": "npx hardhat run scripts/deploy-sepolia.js --network base-sepolia",
     "deploy:base": "npx hardhat run scripts/deploy-base.js --network base",
-    "deploy:local": "npx hardhat run scripts/deploy-local.js --network localhost"
+    "deploy:local": "npx hardhat run scripts/deploy-local.js --network localhost",
+    "deploy:miniapp": "./scripts/deploy-miniapp.sh"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.51.1",
