--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.51.1",
+    "create-onchain": "^0.0.24",
     "glob": "^11.0.3",
     "next": "^14.2.31",
     "react": "^18.3.1",
